# openshot-qt

./: .editorconfig  .travis.yml  MANIFEST.in  OpenShot.py  TESTING_SYNCS.md  dev-requirements.txt  freeze.py  new_freeze.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  main.yml  sphinx.yml
doc/: conf.py  files.rst  main_window.rst  profiles.rst  quick_tutorial.rst  titles.rst
doc/AboutDoc/: Documentation_About.rst  Template.rst  conf.py  files.rst  index.rst  template.rst
doc/_templates/: layout.html
doc/css/: openshot.css
installer/: build-server.py
openshot_qt/: __init__.py  __main__.py
openshot_qt/classes/: app.py  assets.py  info.py  json_data.py  language.py  logger.py  logger_libopenshot.py  metrics.py  paths.py  project_data.py  query.py  settings.py  thumbnail.py  ui_util.py  updates.py  version.py  waveform.py
openshot_qt/classes/exporters/: edl.py  final_cut_pro.py
openshot_qt/classes/importers/: edl.py  final_cut_pro.py
openshot_qt/windows/: about.py  add_to_timeline.py  animated_title.py  animation.py  cutting.py  export.py  file_properties.py  main_window.py  preferences.py  preview_thread.py  profile.py  title_editor.py  video_widget.py
src/: OpenShot.py  launch.py
src/classes/: info.py  json_data.py  query.py  thumbnail.py
src/openshot_qt/: __init__.py  __main__.py  app.py
src/settings/: _default.settings
src/timeline/: app.js  index.html  timeline_rc.py
src/windows/: add_to_timeline.py  main_window.py  preferences.py  title_editor.py  video_widget.py
tests/: query_tests.py
timeline/: Makefile  index.html  timeline.qrc
translations/: show_translations.py
(+124 files in other folders)
