[metadata]
name = openshot_qt
author = JT and co
author-email = JT@example.com
home-page = https://github.com/OpenShot/openshot_qt
license = GPLv3+

[options]
zip_safe = false
include_package_data = true
setup_requires =
  wheel
install_requires =
  libopenshot >= 0.2.5

[bdist_wheel]
universal = False
