[metadata]
name = openshot_qt
version = 2.5.1+git.2
url = https://openshot.org/
license = GNU GPL v.3
author = Jonathan Thomas and others
author_email = jonathan@openshot.org
maintainer = Jonathan Thomas
maintainer_email = jonathan@openshot.org
description = Create and edit stunning videos, movies, and animations
long_description = file: LONG_DESCRIPTION.txt
classifiers = Development Status :: 5 - Production/Stable
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Topic :: Artistic Software
    Topic :: Multimedia :: Video :: Non-Linear Editor
    Natural Language :: English

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    openshot-qt-cli = openshot_qt.launch:main
gui_scripts =
    openshot-qt = openshot_qt.launch:main
